@@ -201,6 +201,13 @@ public slots:
     void play( const Meta::TrackPtr&, uint offset = 0 );
 
     /**
+     * Replays the current track
+     *
+     * This is a convenience method, calls seek( 0 ) actually
+     */
+    void replay();
+
+    /**
      * Pauses the current track
      *
      * This happens asynchronously.  Use EngineObserver to find out when it actually happens.
